--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,6 +49,19 @@
     color: var(--title-color-dark);
 }
 
+.theme__icon {
+    font-size: 1.2rem;
+    color: var(--title-color);
+    background-color: var(--body-color);
+    padding-right: 15rem;
+    padding-top: 0.50rem;
+}
+
+.theme__icon-button {
+    font-size: 1.2rem;
+    color: var(--title-color);
+    background-color: var(--body-color);
+}
 
 
 /*--========================== BREAKPOINTS ==========================--*/
