--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,5 +1,5 @@
 .qualification__container {
-    width: 768px;
+    max-width: 768px;
 }
 
 .qualification__tabs {
@@ -15,7 +15,6 @@
     margin: 0 var(--mb-1);
     cursor: pointer;
 }
-
 
 .qualification__button:hover {
     color: var(--title-color-dark);
@@ -56,62 +55,87 @@
 }
 
 .qualification_subtitle {
-    display: inline-block;
     font-size: var(--small-font-size);
     margin-bottom: var(--mb-1);
+    display: inline-block;
 }
 
 .qualification__calendar {
     font-size: var(--small-font-size);
 }
 
+/* Dots and lines for timeline */
 .qualification__rounder {
-    display: inline-block;
     width: 13px;
     height: 13px;
     background-color: var(--text-color);
     border-radius: 50%;
+    display: inline-block;
 }
 
 .qualification__line {
-    display: block;
     width: 1px;
     height: 100%;
     background-color: var(--text-color);
+    display: block;
     transform: translate(6px, -7px);
 }
 
 
 /*=============== BREAKPOINTS ===============*/
-/* For large devices */
+
+/* Large Devices - Tablets (Landscape) and smaller */
 @media screen and (max-width: 992px) {
     .qualification__container {
-        margin-left: auto;
-        margin-right: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
   
-  /* For medium devices */
+  /* Medium Devices - Tablets (Portrait) */
   @media screen and (max-width: 768px) {
     .qualification__container {
-        margin-left: var(--mb-1-5);
-        margin-right: var(--mb-1-5);
+      margin-left: var(--mb-1-5);
+      margin-right: var(--mb-1-5);
     }
+  
+    /* .qualification__sections {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+    } */
   }
   
+  /* Small Devices - Phones */
   @media screen and (max-width: 576px) {
     .qualification__sections {
-        grid-template-columns: initial;
+      grid-template-columns: initial;
+      /* display: flex;
+      flex-direction: column; */
     }
-
+  
     .qualification__button {
-        margin: 0 var(--mb-0-75);
+      margin: 0 var(--mb-0-75);
+      /* font-size: 0.875rem; 
+      padding: 0.5rem 1rem;  */
     }
+  
+    /* .qualification__container {
+      padding: 0 1rem;
+    } */
   }
   
-  /* For small devices */
+  /* Extra Small Devices - Small Phones */
   @media screen and (max-width: 350px) {
     .qualification__data {
-        gap: 0.5rem;
+      gap: 0.5rem;
+      /* flex-direction: column;
+      align-items: flex-start; */
     }
+  
+    /* .qualification__button {
+      width: 100%;
+      text-align: center;
+    } */
   }
+  
