--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -104,7 +104,7 @@
   }
   
   .marquee-image img:hover {
-    transform: scale(1.5);
+    /* transform: scale(1.5); */
     /* cursor: pointer;        */
   }
   
